*
* 0.1.16
*

- Added System.CPU.Usage(*), System.CPU.Usage5(*) and System.CPU.Usage15(*)
  parameters to WinPerf subagent
- Fixed issue #00000x (unable to modify network service port number)
- Fixed server crash sometimes caused by DCI deletion


*
* 0.1.15
*

- DCI housekeeping implemented
- Fixed server crash at forced poll time
- Fixed critical bug in upgrade script starter under UNIX
- Added support of HDD temperature monitoring under Windows and Linux
- Added PhysicalDisk.Model, PhysicalDisk.SerialNumber and
  PhysicalDisk.Firmware parameters under Windows
- Added parameters System.CPU.Count, System.CPU.Usage*, System.KStat(*)
  and System.Memory.Physical.* to Solaris subagent
- Parameters System.Memory.Swap.* removed from Windows agent because they
  are meaningless under Windows
- Added parameter Disk.Used(*) to NetWare subagent


*
* 0.1.14
*

- Parameters System.Memory.* behaves correctly under Windows
- Fixed bug in loading of NetworkService objects from database
- Fixed bug in interface status detection via NetXMS agent
- Added support for NAT'ed nodes (correct interface polling, etc.)
- Backslash (\) character is no longer works as escape character
  inside parameter arguments enclosed in quotes
- Windows console: object tree works correctly for users without rights
  on root objects
- Windows console: implemented user deletion from access lists
- Implemented action delete
- Windows agent deployment packages now built with InnoSetup
- "Last Values" view added to Windows console
- Fixed issue #0000008
- Added interface for SMS drivers
- Optimized access to collected DCI data in database
- Added support for System.CPU.LoadAvg to Solaris subagent
- Added support for all Net.Interface.* parameters to Solaris subagent


*
* 0.1.13
*

- Fixed bug which cause server to hang when deleting unreacheable node
- Added basic checking of node and interface objects to nxdbmgr


*
* 0.1.12
*

- Added new object class - NetworkService, for simplified network service